CASL/test/WrongMixfixFormula.casl.output
Error (line 1, column 21) unexpected mixfix token: ab
Error (line 2, column 7) unexpected mixfix token: <
