CASL/test/WrongMixfixFormula.casl
forall aa:s . aa <= ab => p
a < b < c
